tkg/2.1.0/gatekeeper-policies/tkg/psp/constraints/drop-capabilities.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: capabilities-drop
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - tanzu-system-ingress
      - tkg-system
      - kube-system
  parameters:
    requiredDropCapabilities: ["ALL"]
