tkg/2.1.0/gatekeeper-policies/tkg/psp/constraints/host-network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: psp-host-network-ports
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "tkg-system", "pinniped-concierge"]
  parameters:
    hostNetwork: false
