tkg/2.1.0/gatekeeper-policies/tkg/psp/constraints/host-ns.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNamespace
metadata:
  name: psp-host-namespace
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"] 
    excludedNamespaces: 
    - kube-system
    - tanzu-system-monitoring
