tkg/2.1.0/gatekeeper-policies/tkg/psp/constraints/readonly-fs.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPReadOnlyRootFilesystem
metadata:
  name: psp-readonlyrootfilesystem
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "tanzu-system-ingress", "tkg-system", "tkg-system-telemetry"]
